infra: dungeon edit seq endpoint

--- a/.github/workflows/dungeon-sequencer-docker.yml
+++ b/.github/workflows/dungeon-sequencer-docker.yml
@@ -25,7 +25,7 @@ jobs:
         id: sed
         run: |
           set -x
-          sed -i 's|dungeon-sequencer.gcp.marigold.dev|dungeon-rollup-test1.gcp.marigold.dev|g' 10_dungeon/sequencer/sequencer-http/src/main.rs
+          sed -i 's|dungeon-sequencer.gcp.marigold.dev|dungeon-rollup-mainnet.gcp.marigold.dev|g' 10_dungeon/sequencer/sequencer-http/src/main.rs
           sed -i 's|127.0.0.1|0.0.0.0|g' 10_dungeon/sequencer/sequencer-http/src/main.rs
           sed -i 's|ghostnet|mainnet|g' 10_dungeon/sequencer/sequencer-http/src/main.rs
           cat 10_dungeon/sequencer/sequencer-http/src/main.rs
